welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:8: error: value avance is not a member of Unit
		avance () avance()
                          ^Runner:14: error: value avance is not a member of Unit
		avance() avance()
                         ^